# plasma-beautifier-qt

./: CMakeLists.txt  README.md  main.cpp  plasma_beautifier_qt.cpp  plasma_beautifier_qt.h  plasma_beautifier_qt.ui
data/: Lightly-transparent.colors  desktoptheme-DeepinV20-dark.tar.xz  installklassy.sh  installlightly.sh  klassyrc  lightlyrc
